@@ -2,6 +2,7 @@ package com.ufcg.psoft.commerce.service.conta;
 
 import com.ufcg.psoft.commerce.dto.carteira.AtivoEmCarteiraResponseDTO;
 import com.ufcg.psoft.commerce.dto.compra.CompraResponseDTO;
+import com.ufcg.psoft.commerce.events.EventoAtivo;
 import com.ufcg.psoft.commerce.exception.cliente.ClienteNaoExisteException;
 import com.ufcg.psoft.commerce.exception.compra.CompraNaoExisteException;
 import com.ufcg.psoft.commerce.exception.compra.StatusCompraInvalidoException;
@@ -13,12 +14,14 @@ import com.ufcg.psoft.commerce.model.enums.StatusCompra;
 import com.ufcg.psoft.commerce.repository.ClienteRepository;
 import com.ufcg.psoft.commerce.repository.CompraRepository;
 import com.ufcg.psoft.commerce.repository.ContaRepository;
-import com.ufcg.psoft.commerce.repository.AtivoCarteiraRepository;
+import com.ufcg.psoft.commerce.repository.AtivoCarteiraRepository;;
+import com.ufcg.psoft.commerce.service.carteira.AtivoEmCarteiraServiceImpl;
 import com.ufcg.psoft.commerce.service.notificacao.NotificacaoServiceImpl;
 import org.modelmapper.ModelMapper;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 import java.math.BigDecimal;
+import java.util.ArrayList;
 import java.util.List;
 import java.util.stream.Collectors;
 
@@ -51,6 +54,8 @@ public class ContaServiceImpl implements ContaService {
                 .saldo(BigDecimal.valueOf(0.00))
                 .carteira(carteira)
                 .build();
+
+        carteira.setConta(conta);
 
         return contaRepository.save(conta);
     }
@@ -133,7 +138,7 @@ public class ContaServiceImpl implements ContaService {
                             .desempenho(desempenho)
                             .build();
                 })
-                .toList();
+                .collect(Collectors.toList());
     }
 
     @Override
